--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Directiva</title>
 	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
+	<link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 	<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -11,8 +12,9 @@
 	<script type="text/javascript" src="directive.js"></script>
 </head>
 <body ng-app="brianDAC.html-tables-editor">
-<div class="test" ng-controller="control">
-<bdac products="products"></bdac>
+<div class="controlador" ng-controller="control">
+<button ng-click="consola()">hazme clic</button>
+<bdac products="products" html="html"></bdac>
 	
 </div>
 
