--- a/template.html
+++ b/template.html
@@ -81,8 +81,7 @@ i.iconEdit {
     height: 100%;
     position: absolute;
     top: 0;
-    background: black;
-    opacity: 0.5;
+    background: rgba(0, 0, 0, 0.48);
 }
 
 .btnEdit div {
@@ -3106,12 +3105,17 @@ function editImg() {
     angular.element("#mainStructure").scope().editImage()
 }
 $("#mainStructure").on("mouseenter", 'img', function() {
+    btnOut()
+    textOut()
+    linksOut()
+    titleOut()
+    trOut()
     if ($(this).parent()[0].localName == "a") {
         $(this).parent().parent().css("position", 'relative');
-        $(this).parent().parent().append("<div href='#imgModal' class='imgEdit' onclick='editImg()' style='cursor:pointer;'><div class='valign-wrapper' style='width:27px;margin:auto;color:white;margin-top: 10px;'><i style='margin-right:40px;'  class='iconEdit fa fa-pencil fa-2x valign' aria-hidden='true'></i></div></div>")
+        $(this).parent().parent().append("<div href='#imgModal' class='imgEdit' onclick='editImg()' style='cursor:pointer;'><div class='valign-wrapper' style='width: 100%;margin:auto;color:white;height: 100%;'><i style=' onclick='editImg()' class='iconEdit fa fa-pencil fa-2x valign' aria-hidden='true'></i></div></div>")
     } else {
         $(this).parent().css("position", 'relative');
-        $(this).parent().append("<div href='#imgModal' class='imgEdit' onclick='editImg()' style='cursor:pointer;'><div class='valign-wrapper' style='width:27px;margin:auto;color:white;margin-top: 10px;'><i style='margin-right:40px;' onclick='editImg()' class='iconEdit fa fa-pencil fa-2x valign' aria-hidden='true'></i></div></div>")
+        $(this).parent().append("<div href='#imgModal' class='imgEdit' onclick='editImg()' style='cursor:pointer;'><div class='valign-wrapper' style='width: 100%;margin:auto;color:white;height: 100%;'><i style=' onclick='editImg()' class='iconEdit fa fa-pencil fa-2x valign' aria-hidden='true'></i></div></div>")
     }
 
 })
@@ -3120,6 +3124,11 @@ function editBtn() {
     angular.element("#mainStructure").scope().editBtn()
 }
 $("#mainStructure").on("mouseenter", ".btnTable", function() {
+    btnOut()
+    textOut()
+    linksOut()
+    titleOut()
+    trOut()
     $(this).css("position", 'relative');
     $(this).attr("onclick", 'editBtn()');
     $(this).addClass('btnEdit');
@@ -3133,6 +3142,11 @@ function editText() {
     angular.element("#mainStructure").scope().editText()
 }
 $("#mainStructure").on("mouseenter", ".textTable", function() {
+    btnOut()
+    textOut()
+    linksOut()
+    titleOut()
+    trOut()
     $(this).css("position", 'relative');
     $(this).attr("onclick", 'editText()');
     $(this).addClass('textEdit');
@@ -3146,6 +3160,11 @@ function editLinks() {
     angular.element("#mainStructure").scope().editLinks()
 }
 $("#mainStructure").on("mouseenter", ".linksTable", function() {
+    btnOut()
+    textOut()
+    linksOut()
+    titleOut()
+    trOut()
     $(this).css("position", 'relative');
     $(this).attr("onclick", 'editLinks()');
     $(this).addClass('linksEdit');
@@ -3159,6 +3178,11 @@ function editTitle() {
     angular.element("#mainStructure").scope().editTitle()
 }
 $("#mainStructure").on("mouseenter", ".titleTable", function() {
+    btnOut()
+    textOut()
+    linksOut()
+    titleOut()
+    trOut()
     $(this).css("position", 'relative');
     $(this).attr("onclick", 'editTitle()');
     $(this).addClass('titleEdit');
@@ -3172,6 +3196,10 @@ function trLinks() {
     angular.element("#mainStructure").scope().editLinks()
 }
 $("#mainStructure").on("click", ".trBlock", function() {
+    btnOut()
+    textOut()
+    linksOut()
+    titleOut()
     trOut()
     $(this).css("position", 'relative');
     $(this).addClass('trEdit');
